--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,4 @@
-import styled from 'styled-components';
-
-export const StyledFooter = styled.footer`
+.footer{
     font-size: 130%;
     background: #424242;
     text-align: center;
@@ -9,4 +7,4 @@ export const StyledFooter = styled.footer`
     float: left;
     margin-bottom: 65px;
     padding: 2.5% 0;
-`;
+}
