add hooks and formatting

--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -1,12 +1,19 @@
 .movie-details{
     background-color: #232323;
-    height: 300px;
+    max-height: 300px;
     padding: 2% 5%;
     font-size: 130%;
     position: absolute;
     margin-top: 10px;
     z-index: 100;
-    top: -400px;
+    top: -500px;
     right: 0px;
 }
+
+.movie-details button{
+    position: absolute;
+    right: 40px; top: 15px;
+}
+
+
 
