--- a/src/components/CheckboxSelector/CheckboxSelector.css
+++ b/src/components/CheckboxSelector/CheckboxSelector.css
@@ -5,7 +5,8 @@
     border: none;
     border-radius: 4px;
     background-color: #424242;    
-    font-size: 16px;
+    font-size: 16px; 
+    margin-top: 10px;    
 }
   
 .selectBox select {
