--- a/src/components/ModalConductor/ModalConductor.css
+++ b/src/components/ModalConductor/ModalConductor.css
@@ -1,36 +1,40 @@
-.add_movie_button{
-    background: #555555;
-    border: none;
-    border-radius: 4px;  
-    color: #F65261;
-    margin: 0.5em 1em;
-    padding: 0.5em 1em;
-    font-size: inherit;
-    position: absolute;
-    right: 40px; top: 15px;
-  
-  }
-  
-.modal-content{
-    width: 530px;
-    background-color: #232323;
-    color: #FFFFFF;
-    text-align: left;
-    position: absolute;
-    top: 25%;
-    left: 30%;
-    padding: 70px 90px 170px 90px;
-    font-size: 2em;
-    z-index: 2;
+.add_movie_button {
+  background: #555555;
+  border: none;
+  border-radius: 4px;
+  color: #F65261;
+  margin: 0.5em 1em;
+  padding: 0.5em 1em;
+  font-size: inherit;
+  position: absolute;
+  right: 40px;
+  top: 15px;
 }
-  
-.close{
-    cursor: pointer;
-    position: absolute;
-    right: 40px; top: 15px;
-    color: #FFFFFF;
-    background-color: #232323;
-    border: none;
-    padding: 0px;
-    font-size: inherit;
-  }
+
+.modal-content {
+  width: 530px;
+  background-color: #232323;
+  color: #FFFFFF;
+  text-align: left;
+  position: absolute;
+  top: 25%;
+  left: 30%;
+  padding: 70px 90px 170px 90px;
+  z-index: 2;
+}
+
+.modal-content h1 {
+  font-weight: normal;
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  right: 40px;
+  top: 15px;
+  color: #FFFFFF;
+  background-color: #232323;
+  border: none;
+  padding: 0px;
+  font-size: 32px;
+}
