--- a/src/components/MovieDetails/MovieDetails.css
+++ b/src/components/MovieDetails/MovieDetails.css
@@ -14,6 +14,10 @@
     position: absolute;
     right: 40px; top: 15px;
 }
+.close-link{
+    display: flex;
+    justify-content: flex-end;
+}
 
 
 
